--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cctx"
-version = "0.1.4"
+version = "0.1.5"
 edition = "2021"
 rust-version = "1.81"
 authors = ["nwiizo <syu.m.5151@gmail.com>"]
@@ -22,3 +22,4 @@ anyhow = "1.0"
 colored = "2.1"
 dialoguer = { version = "0.11", features = ["fuzzy-select"] }
 which = "6.0"
+chrono = "0.4"
